Fix made using spotify link being too big

--- a/src/style/controls.scss
+++ b/src/style/controls.scss
@@ -29,8 +29,11 @@
 			width: calc(100% - (2 * $margin-m));
 		}
 
-		.spotify {
+		.spotify a {
 			align-items: center;
+
+			display: flex;
+			gap: $margin-s;
 
 			color: $text;
 			text-decoration: none;
